generate swagger documentation
